[package]
name = "auction"
version = "0.1.0"
authors = ["Boris Tsarev <boristsarev@gmail.com>"]

[dependencies]
exonum = { version = "0.9.0", path = "../../exonum/exonum" }
exonum-configuration = { version = "0.9.0", path = "../../exonum/services/configuration" }
serde = "1.0.0"
serde_derive = "1.0.0"
failure = "0.1.2"
